创建关注模块，放入父工程下

--- a/parent-article/pom.xml
+++ b/parent-article/pom.xml
@@ -33,6 +33,10 @@
     </properties>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>follow-mode</module>
+    </modules>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
